--- a/gb/23/4/20/n13977082.md
+++ b/gb/23/4/20/n13977082.md
@@ -1,65 +1,56 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>大雨狂炸台中 雷击高压电线、路现“红色涌泉”</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2023/04/id13977083-610352-600x400.jpg" />
 <h6>台中市中科路淹水，上班尖峰，中科园区员工受影响。（林静仪立委办公室提供）
 </h6>
 <hr>
-<p>【大纪元2023年04月20日讯】（大纪元记者黄玉燕<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%8F%B0%E4%B8%AD.md#1">台中</a>报导）受锋面影响，大雨狂炸台湾西半部，台中市府19日晚间10点开设<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%B0%B4%E7%81%BE.md#1">水灾</a>灾害三级应变中心，降雨量持续整晚，累积超过100mm，20日上午10点升为二级开设，并召开跨局处工作会议，汇报各区回报状况。议会大会，多位议员关切水情。市长卢秀燕指出，这波雨势比气象局预报来得早，原本气象局估计20日才会降下明显雨势，截至目前共接获通报10条道路积<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%B7%B9%E6%B0%B4.md#1">淹水</a>，另全市7区共20户民宅淹水；因20、21日仍有大雨机会，提醒用路人注意路况及行驶安全。</p>
-<figure id="attachment_13977085" aria-describedby="caption-attachment-13977085" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/04/id13977085-610354.jpg"><img class="size-large wp-image-13977085" src="https://i.epochtimes.com/assets/uploads/2023/04/id13977085-610354-600x372.jpg" alt="" width="600" b="372" /></a><figcaption id="caption-attachment-13977085" class="wp-caption-text">大雅区文雅里部分住户因雷击导致停电，部分路段<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%B7%B9%E6%B0%B4.md#1">淹水</a>无法通行。（萧隆泽议员办公室提供）</figcaption></figure>
+<p>【大纪元2023年04月20日讯】（大纪元记者黄玉燕台中报导）受锋面影响，大雨狂炸台湾西半部，台中市府19日晚间10点开设水灾灾害三级应变中心，降雨量持续整晚，累积超过100mm，20日上午10点升为二级开设，并召开跨局处工作会议，汇报各区回报状况。议会大会，多位议员关切水情。市长卢秀燕指出，这波雨势比气象局预报来得早，原本气象局估计20日才会降下明显雨势，截至目前共接获通报10条道路积淹水，另全市7区共20户民宅淹水；因20、21日仍有大雨机会，提醒用路人注意路况及行驶安全。</p>
+<figure id="attachment_13977085" aria-describedby="caption-attachment-13977085" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/04/id13977085-610354.jpg"><img loading="lazy" decoding="async" class="size-large wp-image-13977085" src="https://i.epochtimes.com/assets/uploads/2023/04/id13977085-610354-600x372.jpg" alt="" width="600" b="372" /></a><figcaption id="caption-attachment-13977085" class="wp-caption-text">大雅区文雅里部分住户因雷击导致停电，部分路段淹水无法通行。（萧隆泽议员办公室提供）</figcaption></figure>
 <p>19日晚间近6点，大雅区文雅里部分住户因雷击导致停电。台电表示，停电原因为高压线路遭雷击造成，原停电户数有2千多户，停电范围有大雅永和路、中山北路等一带，利用自动化转供复电系统，先缩小停电区间，晚上8点全数复电。</p>
 <p>此外，大雅区东大路、大甲北堤东路、中山路、龙井区沙田路、西屯区长安路及潭子区雅丰街等，也纷纷传出道路积水或水淹民宅情形。议员萧隆泽质疑水利局在潭子东宝里、大丰里进行十一张圳区域排水沟施工，相关防汛措施未处理好才造成附近淹水。水利局回应，19日晚至今降雨量达200多公釐，侧沟才积水，雨停水就会退去，潭子原本就会淹水，水利局会持续改善排水设施。</p>
-<p>台湾大道往沙鹿路段20日上午约8点积水严重，<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%8F%B0%E4%B8%AD.md#1">台中</a>荣总及东海大学附近充斥黄泥水，弘光科大门前疑似有女大学生被积水冲倒，在水中向下滑行数公尺，校安人员紧急协助，险象环生。有市民说，平常从市区到沙鹿上班开车40分钟，今天开了1.5小时。</p>
-<figure id="attachment_13977084" aria-describedby="caption-attachment-13977084" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/04/id13977084-610353.jpg"><img class="size-large wp-image-13977084" src="https://i.epochtimes.com/assets/uploads/2023/04/id13977084-610353-600x422.jpg" alt="" width="600" b="422" /></a><figcaption id="caption-attachment-13977084" class="wp-caption-text">台中龙井区新仁路出现“红色涌泉”。（林静仪立委办公室提供）</figcaption></figure>
+<p>台湾大道往沙鹿路段20日上午约8点积水严重，台中荣总及东海大学附近充斥黄泥水，弘光科大门前疑似有女大学生被积水冲倒，在水中向下滑行数公尺，校安人员紧急协助，险象环生。有市民说，平常从市区到沙鹿上班开车40分钟，今天开了1.5小时。</p>
+<figure id="attachment_13977084" aria-describedby="caption-attachment-13977084" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/04/id13977084-610353.jpg"><img loading="lazy" decoding="async" class="size-large wp-image-13977084" src="https://i.epochtimes.com/assets/uploads/2023/04/id13977084-610353-600x422.jpg" alt="" width="600" b="422" /></a><figcaption id="caption-attachment-13977084" class="wp-caption-text">台中龙井区新仁路出现“红色涌泉”。（林静仪立委办公室提供）</figcaption></figure>
 <p>海线龙井、沙鹿多处传出灾情。有民众表示，沙田路四段、五段、工业路多处都有淹水，新仁路更现“红色涌泉”。清晨豪大雨后，沙鹿中山路鹿峰段至沙鹿市场周边、斗潭路沿线、英才路沿线、北势东路沿线、平等七街周边、龙井工业路等多个严重淹水路段。</p>
 <p>水利局回应，依中央气象局情资显示，中部地区19至21日受锋面影响，易有短时强降雨，经统计，大甲、大安、外埔、沙鹿、神冈、龙井等15个地区，24小时累积雨量超过100mm，其中以大甲区199mm为最大，已超过水利设施排水容许标准，造成海线地区多处积淹水发生。</p>
 <p>责任编辑：于凝儿</p>
-
-<hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/17/6/2/n9216783.md#1">爱车泡水免惊 台车商教你这样做</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/18/8/27/n10670051.md#1">车辆泡水该怎么办 五大观察点帮助你</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/7/n13967364.md#1">组图：英国兴建“超级下水道” 减少河川污染</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/18/n13975712.md#1">春雨来了！台专家：能解燃眉之急</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/18/n13975766.md#1">台薪水追不上房价 购屋年龄越来越高</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/19/n13976402.md#1">中市迁入人口成长 北屯4812人全台第二热</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/19/n13976388.md#1">中市公车事故率高于全国 议员吁落实站区净空</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/18/n13975706.md#1">搭台铁不能刷敬老卡惹怨  中市府：七月上路</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/18/n13975619.md#1">中市再传国小生遭师霸凌 家长提不适任调查</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/17/6/2/n9216783.md#1">爱车泡水免惊 台车商教你这样做</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/8/27/n10670051.md#1">车辆泡水该怎么办 五大观察点帮助你</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/4/7/n13967364.md#1">组图：英国兴建“超级下水道” 减少河川污染</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/4/18/n13975712.md#1">春雨来了！台专家：能解燃眉之急</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/4/18/n13975766.md#1">台薪水追不上房价 购屋年龄越来越高</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/4/19/n13976402.md#1">中市迁入人口成长 北屯4812人全台第二热</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306520.md#1">“绿奢宅”身价涨 中央公园建案紧追七期</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306510.md#1">山城丰原踩舞同乐 台中国际踩舞祭九月登场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306502.md#1">公园私栽果菜恐挨罚  民众投诉虫多、起红疹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305822.md#1">麟洋配奥运2连霸  台中名店太阳饼买一送一</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/16/n9964704.md#1" target="_blank">刘晓：正统婚礼有深意 中共扭曲藏祸心</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/22/n11273218.md#1" target="_blank">用实际行动赎罪 派出所所长胃癌痊愈</a></li>
-<hr>
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/6/18/n11329746.md#1" target="_blank">传奇总统里根（10）：一封家书承载使命</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/15/n10977767.md#1" target="_blank">伊朗姑娘嘉扎尔?塔瓦纳艾(3) 骑向自由</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/14/n13973040.md#1">【百年真相】北平和谈第一功臣 为何祸及三代？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/15/n13973563.md#1">【未解之谜】血型中的创世之谜</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/9/n13968604.md#1">济公和尚破衣破扇 如何大显神通？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/12/n13971175.md#1">【天道有知】天知道！改邪归正为何儿子反遭祸</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/15/n13973255.md#1">从彼得兔到兔儿爷，一路陪伴，危难救助</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/19/n13976739.md#1">【新唐人大视野】美菲军演 习南海舰队训话泄秘</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/19/n13976493.md#1">【时事金扫描】普泽前线对阵？瓦格纳打退堂鼓</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/19/n13976561.md#1">【拍案惊奇】农管再刮民脂 中共巧立名目创收</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/17/n13975276.md#1">为何中国亿万富翁一个个地消失</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/18/n13975905.md#1">分享邓超与女儿相处趣事 孙俪：这爸爸真可以</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/17/n13974820.md#1">中国经济低迷 大学毕业生在家“啃老”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/18/n13975905.md#1">分享邓超与女儿相处趣事 孙俪：这爸爸真可以</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/17/n13975247.md#1">黄晓明上节目执意穿皮鞋比赛 鞋底厚度引关注</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/17/n13975159.md#1">念不出金像奖获奖者大名 香港颁奖明星陷尴尬</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/17/n13975204.md#1">分手4年突按赞有关李晨帖文 范冰冰发文回应</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/17/n13975100.md#1">哈林揪5队员环台 被爆料与卜学亮“吵全程”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/17/n13974855.md#1">你的小孩是天才吗？ 专家：可从5个迹象判断</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/9/n13968965.md#1">虾青素防眼病更佳 6种护眼顶级食物不可错过</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/18/n13975539.md#1">抚养几个小孩的父母分享推文 让人会心一笑</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/17/n13975003.md#1">3种自然疗法抗过敏 疗效强大堪比激素药</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/17/n13975025.md#1">泡菜吃法竟有这么多 你试过了吗？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306413.md#1">立秋的著名成语  传递什么警讯？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304300.md#1">历史上那些“退”的智慧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305642.md#1">宋孝宗“竞选”皇位  一猫和十美女如何起作用？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309049.md#1">目睹圣母玛利亚雕像眨眼睛 美俄州民众称奇迹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/1/n14302522.md#1">【古道人生】相士说他是石崇再世 致富之机全在意想之外！</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/13/n14310055.md#1">【新闻看点】张又侠表忠是求饶 秦刚再见不到？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309753.md#1">【新闻大家谈】惊天案：央企卖尸体 党媒造反？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309979.md#1">【秦鹏观察】乌军攻入俄罗斯 中俄朝各打小算盘</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308743.md#1">用特斯拉皮卡种地走红 美农场主：真的很快</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308673.md#1">【更新】2024年巴黎奥运奖牌榜 8月10日</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308823.md#1">17岁美华裔女生开副业 月进7.1万美元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308335.md#1">周子瑜谈个子高的坏处 与志效公开真实身高</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308447.md#1">章子怡带8岁女儿看话剧 母女俩装扮精致</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308804.md#1">“七夕”最惨新片 《多多是条狗》票房仅300元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308866.md#1">刻画外卖骑手生活 徐峥《逆行人生》评论两极</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14308912.md#1">罗时丰切割下架YT影片 “侄子”获店家力挺打气</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309023.md#1">研究发现最可能发生车祸时段 开车务必小心</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309654.md#1">如何从指甲看出身体是否健康？ 专家这么说</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308504.md#1">午睡太久会失智！ 这个时间点小睡片刻最好</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307005.md#1">到星巴克怎么点？TOP7健康饮品及点餐5技巧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308183.md#1">木瓜促消化、护眼 这些美味吃法为健康加分</a></li>
 <hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/4/20/n13977082.htm">大雨狂炸台中 雷击高压电线、路现“红色涌泉”</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/4/20/n13977082.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/4/20/n13977082.htm">大雨狂炸台中 雷击高压电线、路现“红色涌泉”</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/4/20/n13977082.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
